# bras-pick-place

./: README.md
mon_bras_pick_place/: README.md  package.xml  setup.cfg  setup.py
mon_bras_pick_place/config/: controllers.yaml  mon_bras_pick_place - Raccourci.lnk
mon_bras_pick_place/models/: lite6.xml
mon_bras_pick_place/mon_bras_pick_place/: pick_place_node.py  ros_control_node.py
mon_bras_pick_place/worlds/: lite6_scene.xml
